Few minor changes from HTML/CSS changes.
- Tidied up JS slightly, using 4 space indentation
- Moved layout_* templates into folders
- Few updates to the base templates
- Put oscar's JS into its own folder within static/js
- Added flatpages to the test env to get tests to pass

--- a/oscar/templates/base.html
+++ b/oscar/templates/base.html
@@ -25,7 +25,7 @@
         {% endif %}
         <!-- Responsive - will need to be minified -->
         <link rel="stylesheet" href="{{ STATIC_URL }}css/responsive.css" />
-        {% block extra_head %}{% endblock %}
+        {% block extrahead %}{% endblock %}
     </head>
     <body id="{% block body_id %}default{% endblock %}" class="{% block body_class %}default{% endblock %}">
         {% block layout %}{% endblock %}
@@ -35,23 +35,29 @@
                 <!-- Tracking to go here. -->
             {% endif %}
         {% endblock %}
+
         <!-- Jquery -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="{{ STATIC_URL }}js/jquery/jquery-1.7.1.min.js"><\/script>')</script>
         <script src="{{ STATIC_URL }}js/jquery/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
         <script src="{{ STATIC_URL }}js/scrollto/jquery.scrollTo-min.js" type="text/javascript" charset="utf-8"></script>
         <!-- Bootstrap -->
-		<script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap/bootstrap.min.js"></script>
+		<script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap/bootstrap.min.js" charset="utf-8"></script>
 		<!-- Elastislide carousel js -->
         <script src="{{ STATIC_URL }}js/elastislide/jquery.elastislide.js" type="text/javascript" charset="utf-8"></script>    
+
         <!-- Responsive carousel js -->
         {% if product %}
         <script src="{{ STATIC_URL }}js/colorbox/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script> 
         <script src="{{ STATIC_URL }}js/responsivegallery/jquery.tmpl.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="{{ STATIC_URL }}js/responsivegallery/gallery.js" type="text/javascript" charset="utf-8"></script>
         {% endif %}
+
+		{# Block for additional scripts #}
+		{% block extrascripts %}{% endblock %}
+
         <!-- Front end js -->
-        <script src="{{ STATIC_URL }}js/script.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ STATIC_URL }}js/oscar/ui.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript">
 			$(function(){
 				{% block onbodyload %}
