--- a/oscar/templates/checkout/layout.html
+++ b/oscar/templates/checkout/layout.html
@@ -14,10 +14,13 @@
     				<li><a href="#about">About</a></li>
     				<li><a href="#contact">Contact</a></li>
     				{% if user.is_authenticated %}
-    				<li><a href="{% url customer:summary %}">Profile</a></li>
-    				<li><a href="{% url customer:logout %}">Logout</a></li>
+						{% if user.is_staff %}
+						<li><a href="{% url dashboard:index %}">Dashboard</a></li>
+						{% endif %}
+						<li><a href="{% url customer:summary %}">Profile</a></li>
+						<li><a href="{% url customer:logout %}">Logout</a></li>
     				{% else %}
-    				<li><a href="{% url customer:login %}">Login</a></li>
+						<li><a href="{% url customer:login %}">Login</a></li>
     				{% endif %}
                 </ul>
             </div>
