--- a/oscar/templates/dashboard/promotions/delete.html
+++ b/oscar/templates/dashboard/promotions/delete.html
@@ -1,5 +1,4 @@
-{% extends 'layout_dashboard.html' %}
-
+{% extends 'dashboard/layout.html' %}
 
 {% block dashboard_content %}
 <h1>Delete promotion?</h1>
