removed unused css folder and files

--- a/oscar/templates/base.html
+++ b/oscar/templates/base.html
@@ -42,6 +42,7 @@
         <script src="{{ STATIC_URL }}js/scrollto/jquery.scrollTo-min.js" type="text/javascript" charset="utf-8"></script>
         <!-- Bootstrap -->
 		<script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap/bootstrap.min.js"></script>
+		{% block extra_foot %}{% endblock %}
 		<!-- Elastislide carousel js -->
         <script src="{{ STATIC_URL }}js/elastislide/jquery.elastislide.js" type="text/javascript" charset="utf-8"></script>    
         <!-- Responsive carousel js -->
