--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -4,6 +4,15 @@
 {% load promotion_tags %}
 {% load category_tags %}
 
+{% block extrahead %}
+    {% if product %}
+    <!-- Colorbox for image galleries -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}js/colorbox/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+    {% endif %}
+    <!-- Responsive - will need to be minified -->
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/responsive.css" />
+{% endblock %}
+
 {% block layout %}
     <div class="navbar accounts">
     	<div class="navbar-inner">
@@ -128,4 +137,19 @@
     	</div><!-- /page_inner -->
     </div><!-- /container-fluid -->
     {% include "partials/footer.html" %}
+{% endblock %}
+
+{# Block for additional scripts #}
+{% block extrascripts %}
+    <script src="{{ STATIC_URL }}js/scrollto/jquery.scrollTo-min.js" type="text/javascript" charset="utf-8"></script>
+    <!-- Elastislide carousel js -->
+    <script src="{{ STATIC_URL }}js/elastislide/jquery.elastislide.js" type="text/javascript" charset="utf-8"></script>    
+    <!-- Responsive gallery js -->
+    {% if product %}
+    <script src="{{ STATIC_URL }}js/colorbox/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script> 
+    <script src="{{ STATIC_URL }}js/responsivegallery/jquery.tmpl.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ STATIC_URL }}js/responsivegallery/gallery.js" type="text/javascript" charset="utf-8"></script>
+    {% endif %}
+    <!-- Front end js -->
+    <script src="{{ STATIC_URL }}js/oscar/ui.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
