--- a/oscar/templates/dashboard/catalogue/product_list.html
+++ b/oscar/templates/dashboard/catalogue/product_list.html
@@ -29,8 +29,11 @@
         <th>UPC</th>
         <th>Title</th>
         <th>Product class</th>
-		<th>Partner</th>
         <th>Status</th>
+		<th>Partner</th>
+		<th>Price excl. tax</th>
+		<th>Price incl. tax</th>
+		<th>Number in stock</th>
         <th></th>
     </tr>
     {% for product in products %}
@@ -38,11 +41,16 @@
 		<td>{{ product.upc }}</td>
         <td>{{ product.title }}</td>
 		<td>{{ product.product_class.name }}</td>
-		<td>{{ product.stockrecord.partner.name }}</td>
 		<td>{{ product.status|default:"-" }}</td>
-        <td>
-            <a class="btn btn-info" href="">Edit</a>
-        </td>
+		{% with stockrecord=product.stockrecord %}
+			<td>{{ stockrecord.partner.name }}</td>
+			<td>{{ stockrecord.price_excl_tax|currency }}</td>
+			<td>{{ stockrecord.price_incl_tax|currency }}</td>
+			<td>{{ stockrecord.num_in_stock }}</td>
+		{% endwith %}
+		<td>
+			<a class="btn btn-info" href="">Edit</a>
+		</td>
     </tr>
     {% endfor %}
 </table>
