--- a/oscar/static/less/styles.less
+++ b/oscar/static/less/styles.less
@@ -59,7 +59,7 @@
 /*@import "bootstrap/progress-bars.less";*/
 /*@import "bootstrap/accordion.less";*/
 /*@import "bootstrap/carousel.less";*/
-/*@import "bootstrap/hero-unit.less";*/
+@import "bootstrap/hero-unit.less";
 
 // Unique Page Styles
 @import "page/osc_layout.less"; // Note: combine and remove with layout.less in bootstrap - it was kept separart on intital for bootstrap updates
