--- a/oscar/templates/promotions/home.html
+++ b/oscar/templates/promotions/home.html
@@ -1,4 +1,8 @@
-{% extends "layout.html" %}
+{% extends "promotions/layout.html" %}
+
+{% block navbar %}
+ssss
+{% endblock %}
 
 {% block header %}
 <div class="page-header">
